--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
+/.yarn
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -19,6 +19,12 @@
 # misc
 .DS_Store
 *.pem
+
+
+#servies workers
+/public/**.js
+
+
 
 # debug
 npm-debug.log*
